--- a/admin-management/package.json
+++ b/admin-management/package.json
@@ -10,6 +10,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@vant/touch-emulator": "^1.2.0",
+    "axios": "^0.19.2",
+    "lib-flexible": "^0.3.2",
+    "vant": "^2.5.9",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
@@ -37,6 +41,7 @@
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
+    "px2rem-loader": "^0.1.9",
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
